elem imgs wrap pls

--- a/read.html
+++ b/read.html
@@ -30,7 +30,7 @@
         <h2>Read</h2>
         <h1>Explore the In-Depth Experience of Roberto Ong's Life</h1>
         <p>A New Media Adaptation</p>
-        <h3>Read a Four-part storytelling journey inspired by Bob Ong’s ABNKKBSNPLAko?!</h3>
+        <h2>Read a Four-part storytelling journey inspired by Bob Ong’s ABNKKBSNPLAko?!</h2>
     </div>
 
     <div class="reading-container">
@@ -48,16 +48,18 @@
                     <br>
                     Dito nagsimula ang lahat—ang pagsagot sa mga tanong na hindi mo rin alam kung bakit tinatanong, ang pagbasa ng abakada kahit marunong ka na, at ang unang beses mong maranasan ang stress sa pagsusulit kahit madali lang naman dapat ito.
                 </p>
+                <div class="elem-img">
                 <img src="assets/read/elementary/elementary-pic1.png" alt="">
                 <img src="assets/read/elementary/elementary-pic2.png" alt="">
+                </div>
             </div>
             <h1>Challenges + Funny Moments</h1>
             <img src="assets/read/elementary/elem-stickynotes.png" alt="">
-            <h3>
+            <h2>
                 Pero hindi pwedeng habang buhay kang nasa elementarya. Dumating din ang araw na kailangan mong magpaalam sa paborito mong guro, sa mga baong ginagawang ng nanay mo, at sa murang tuition fee. 
                 <br>
                 Tara, lipat na tayo sa high school!
-            </h3>
+            </h2>
         </div>
 
         <div class="reading-section">
@@ -72,9 +74,9 @@
             </div>
             <h1>Challenges + Funny Moments</h1>
             <img src="assets/read/highschool/highschool-stickynotes.png" alt="">
-            <h3>
+            <h2>
                 Pero gaya ng elementarya, ang high school ay isang stage lang ng buhay. Kapag dumating ang graduation, marerealize mong hindi pa pala tapos ang pag-aaral mo—sa totoo lang, nagsisimula pa lang ang totoong laban sa kolehiyo.
-            </h3>
+            </h2>
         </div>
 
         <div class="reading-section">
@@ -89,9 +91,9 @@
             </div>
             <h1>Challenges + Funny Moments</h1>
             <img src="assets/read/college/college-stickynotes.png" alt="">
-            <h3>
+            <h2>
                 At kapag akala mong tapos na lahat ng hirap, biglang darating ang graduation… at malalaman mong may mas malaking problema ka: “paano nga ba ako maghahanap ng trabaho?”
-            </h3>
+            </h2>
         </div>
 
         <div class="reading-section">
@@ -106,11 +108,11 @@
             </div> 
             <h1>Challenges + Funny Moments</h1>
             <img src="assets/read/adulthood/adulthood-stickynotes.png" alt="">
-            <h3>
+            <h2>
                 Sa huli, ang buhay ay parang eskwelahan—walang katapusang aral, quizzes, at exams. Pero kahit mahirap, sulit pa rin, kasi sa bawat stage ng buhay, may bagong kwento kang mabubuo. At sa huli, lahat ng ‘ABNKKBSNPLAko?!’ moments mo, sila rin ang magpapatawa at magpapaiyak sa’yo pag binalikan mo na lang sila bilang alaala.
                 <br>
                 At ikaw? Ano ang kwento ng buhay-eskwela mo?
-            </h3>
+            </h2>
 
             <div class="end-to-quiz">
                 <h2>You've reached the end of the story.</h2>
