Smooth scrolling read page and added almost all images in about

--- a/about.html
+++ b/about.html
@@ -38,19 +38,25 @@
 
             <!-- Top Row -->
             <div class="person">
-                <img src="" alt="" class="p-img">
+                <div class="img-box">
+                <img src="assets/about/ej.png" alt="" class="p-img large">
+                </div> 
                 <h2>Emmanuelle Salga</h2>
                 <p>Developer</p>
             </div>
 
             <div class="person">
-                <img src="" alt="" class="p-img">
+                <div class="img-box">
+                    <img src="assets/about/mark.png" alt="" class="p-img">
+                </div>
                 <h2>Mark Luis Balbin</h2>
                 <p>Developer</p>
             </div>
 
             <div class="person">
-                <img src="" alt="" class="p-img">
+                <div class="img-box">
+                    <img src="assets/about/rania.png" alt="" class="p-img large">
+                </div>
                 <h2>Rania San Pedro</h2>
                 <p>UI/UX Designer, Content Writer</p>
             </div>
@@ -61,19 +67,25 @@
         <div class="rows">
 
             <div class="person">
-                <img src="" alt="" class="p-img">
+                <div class="img-box">
+                    <img src="" alt="" class="p-img">
+                </div>
                 <h2>Bea Athena Salazar</h2>
                 <p>UI/UX Designer</p>
             </div>
 
             <div class="person">
-                <img src="" alt="" class="p-img">
+                <div class="img-box">
+                    <img src="assets/about/bobis.png" alt="" class="p-img bobis">
+                </div>
                 <h2>Nicolas Bobis</h2>
                 <p>Content Writer</p>
             </div>
 
             <div class="person">
-                <img src="" alt="" class="p-img">
+                <div class="img-box">
+                    <img src="assets/about/tofu.png" alt="" class="p-img large">
+                </div>
                 <h2>Marc Daniel Cabrera</h2>
                 <p>Content Writer</p>
             </div>
