--- a/quiz.html
+++ b/quiz.html
@@ -31,7 +31,7 @@
         <h1>Which 'ABNKKBSNPLAko?!' Character Are You?</h1>
         <p>Ever wondered which ABNKKBSNPLAko?! character best matches your personality? Take this quiz to find out! Are
             you the nostalgic dreamer, the class clown, or the ultimate best friend? Let’s go!</p>
-        <a href="" class="quiz-btn">Start the Quiz</a>
+        <a href="https://www.buzzfeed.com/raniasanpedro/which-aabnkkbsnplakoa-character-are-you-bjrwa0sqv1" class="quiz-btn" target="_blank">Start the Quiz</a>
     </div>
 
     <div class="qbox">
