--- a/read.html
+++ b/read.html
@@ -40,11 +40,15 @@
                 <p>
                     Naalala mo pa ba ang unang araw mo sa eskwela? Suot mo ang bago mong uniporme, mahigpit mong hawak ang lunch box na puno ng baon ni Nanay, at may halong takot at excitement sa iyong dibdib. Hindi mo alam kung ano ang mangyayari, pero ang sigurado ka lang—nasa bagong yugto ka ng buhay mo.
                     <br>
+                    <br>
                     Si Roberto ‘Bob’ Ong—isang batang puno ng tanong—ay nakaupo sa harapan ng pisara, pinagmamasdan ang kanyang bagong guro.
+                    <br>
                     <br>
                     "Mga bata, ako si Gng. Cruz, at ako ang magiging guro ninyo ngayong taon."
                     <br>
+                    <br>
                     Sa tabi niya, naroon si Ulo—hindi dahil malaki ang ulo niya, kundi dahil parang palaging may iniisip na kalokohan. Sa likod, may isang tahimik na batang babae na tila may kakaibang liwanag sa kanyang presensya. Siya si Special Someone.
+                    <br>
                     <br>
                     Dito nagsimula ang lahat—ang pagsagot sa mga tanong na hindi mo rin alam kung bakit tinatanong, ang pagbasa ng abakada kahit marunong ka na, at ang unang beses mong maranasan ang stress sa pagsusulit kahit madali lang naman dapat ito.
                 </p>
@@ -55,8 +59,9 @@
             </div>
             <h1>Challenges + Funny Moments</h1>
             <img src="assets/read/elementary/elem-stickynotes.png" alt="">
-            <h2>
+            <h2 id="remarks-text">
                 Pero hindi pwedeng habang buhay kang nasa elementarya. Dumating din ang araw na kailangan mong magpaalam sa paborito mong guro, sa mga baong ginagawang ng nanay mo, at sa murang tuition fee. 
+                <br>
                 <br>
                 Tara, lipat na tayo sa high school!
             </h2>
@@ -69,12 +74,13 @@
                 <p>
                     Kung sa elementarya, takot ka sa guro, sa high school naman, takot ka sa ibang estudyante. Biglang dumami ang mga tao at lumawak ang mundo mo. Dito mo makikita ang iba't ibang personalidad—may cool kids, may nerds, may tahimik lang sa sulok, at syempre, andiyan pa rin si Bob Ong na nagtataka kung bida ba talaga siya sa sariling kwento.
                     <br>
+                    <br>
                     Ang unang araw sa high school ay parang panibagong pagsubok—mas mahaba ang pila sa canteen, mas maraming assignment, at mas mataas ang pressure na magkaroon ng barkada. Buti na lang, andiyan pa rin si Ulo na mas makulit kaysa dati, at si Special Someone, na mas maganda pa yata ngayon.
                 </p> 
             </div>
             <h1>Challenges + Funny Moments</h1>
             <img src="assets/read/highschool/highschool-stickynotes.png" alt="">
-            <h2>
+            <h2 id="remarks-text">
                 Pero gaya ng elementarya, ang high school ay isang stage lang ng buhay. Kapag dumating ang graduation, marerealize mong hindi pa pala tapos ang pag-aaral mo—sa totoo lang, nagsisimula pa lang ang totoong laban sa kolehiyo.
             </h2>
         </div>
@@ -85,13 +91,14 @@
                 <p>
                     Kung sa high school, takot ka sa ibang estudyante, sa kolehiyo naman, takot ka sa tuition fee at thesis. Ito ang panahon kung saan matututunan mong hindi lang katalinuhan ang puhunan sa pag-aaral—kailangan mo ring maging madiskarte.
                     <br>
+                    <br>
                     Sa unang araw ng klase, pumasok si Bob Ong sa university, bitbit ang pangarap na makatapos… at ang malaking kaba sa dibdib. Dito niya nakilala si Portia—ang kaklaseng magaling sa recitation pero hindi mo maintindihan kung paano siya laging handa.
                 </p> 
                 <img src="assets/read/college/college-pic.png" alt="">
             </div>
             <h1>Challenges + Funny Moments</h1>
             <img src="assets/read/college/college-stickynotes.png" alt="">
-            <h2>
+            <h2 id="remarks-text">
                 At kapag akala mong tapos na lahat ng hirap, biglang darating ang graduation… at malalaman mong may mas malaking problema ka: “paano nga ba ako maghahanap ng trabaho?”
             </h2>
         </div>
@@ -103,13 +110,15 @@
                 <p>
                     Kapag graduate ka na, aakalain mong tapos na ang pagiging estudyante. Ngunit ang totoo, doon pa lang magsisimula ang totoong edukasyon—ang klase ng learning na hindi mo matututunan sa libro.
                     <br>
+                    <br>
                     Sa unang trabaho ni Bob Ong, napansin niyang parang high school lang ulit ang mundo—may cool kids (mga boss), may nerds (mga empleyado), at may mga tahimik lang sa gilid (mga bagong hire).
                 </p>
             </div> 
             <h1>Challenges + Funny Moments</h1>
-            <img src="assets/read/adulthood/adulthood-stickynotes.png" alt="">
-            <h2>
+            <img id="resize-Img" src="assets/read/adulthood/adulthood-stickynotes.png" alt="">
+            <h2 id="remarks-text">
                 Sa huli, ang buhay ay parang eskwelahan—walang katapusang aral, quizzes, at exams. Pero kahit mahirap, sulit pa rin, kasi sa bawat stage ng buhay, may bagong kwento kang mabubuo. At sa huli, lahat ng ‘ABNKKBSNPLAko?!’ moments mo, sila rin ang magpapatawa at magpapaiyak sa’yo pag binalikan mo na lang sila bilang alaala.
+                <br>
                 <br>
                 At ikaw? Ano ang kwento ng buhay-eskwela mo?
             </h2>
@@ -135,9 +144,11 @@
             </form>
         </div>
 
-        <h2>Comments</h2>
-        <div id ="comments" class="comment-list">
+        <div id="comment-container">
+            <h2>Comments</h2>
+            <div id ="comments" class="comment-list">
             <!-- comments here -->
+        </div>
         </div>
 
         <button id="load-more">See More...</button>
