added last team member and fixed mini txt err

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 
             <div class="person">
                 <div class="img-box">
-                    <img src="" alt="" class="p-img">
+                    <img src="assets/about/bea.png" alt="" class="p-img">
                 </div>
                 <h2>Bea Athena Salazar</h2>
                 <p>UI/UX Designer</p>
