--- a/explore.html
+++ b/explore.html
@@ -17,12 +17,19 @@
     <header>
         <nav class="navBar">
             <div class="logo">Acoustic 6</div>
-            <ul class="nav-links">
-                <li><a href="index.html" class="nav-routes">Home page</a></li>
-                <li><a href="about.html" class="nav-routes">About Us</a></li>
-                <li><a href="explore.html" class="nav-routes">Explore More</a></li>
-            </ul>
-            <a href="read.html" class="readbtn">Read Now</a>
+
+            <!-- Hamburger Menu Button (Hidden on Desktop) -->
+            <button class="hamburger">&#9776;</button>
+
+            <!-- Navigation Links (Will toggle on mobile) -->
+            <div class="nav-container">
+                <ul class="nav-links">
+                    <li><a href="home.html" class="nav-routes">Home page</a></li>
+                    <li><a href="about.html" class="nav-routes">About Us</a></li>
+                    <li><a href="explore.html" class="nav-routes">Explore More</a></li>
+                </ul>
+                <a href="read.html" class="readbtn">Read Now</a>
+            </div>
         </nav>
     </header>
     
