--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- Navigation Links (Will toggle on mobile) -->
             <div class="nav-container">
                 <ul class="nav-links">
-                    <li><a href="home.html" class="nav-routes">Home page</a></li>
+                    <li><a href="index.html" class="nav-routes">Home page</a></li>
                     <li><a href="about.html" class="nav-routes">About Us</a></li>
                     <li><a href="explore.html" class="nav-routes">Explore More</a></li>
                 </ul>
