--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-    <footer class="page-footers">
+    <footer class="about-footers">
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
     </footer>     
 </body>
