Finished styling exploring section

--- a/explore.html
+++ b/explore.html
@@ -46,7 +46,7 @@
         <div id="e-1">
             <div class="e-c-l-b">
                 <h1>1. Nostalgia for School Life</h1>
-                <div class="e-content-l">
+                <div id="first-set" class="sets">
                     <img src="assets/explore/Theme Images/theme1.png" alt="">
                     <p>The book beautifully captures the universal experience of growing up in the Philippines, from elementary to adulthood. It brings back memories of school days filled with laughter, challenges, and unforgettable moments.</p>
                 </div>
@@ -56,7 +56,7 @@
         <div id="e-2">
             <div class="e-c-r-b">
                 <h1>2. Humor and Wit</h1>
-                <div class="e-content-r">
+                <div id="second-set" class="sets">
                     <p>Bob Ong's signature humor shines throughout the narrative, making readers laugh at the quirks and realities of Filipino student life while subtly reflecting on societal norms and expectations.</p>
                     <img src="assets/explore/Theme Images/theme2.png" alt="">
                 </div>
@@ -66,7 +66,7 @@
         <div id="e-3">
             <div id="e-c-rd-b">
                 <h1>3. Journey of Self-Discovery and Growth</h1>
-                <div id="e-3-content">
+                <div id="third-set" class="sets">
                     <img src="assets/explore/Theme Images/theme3.png" alt="">
                     <p>The story showcases the protagonist's journey of self-awareness and personal growth as he navigates through different stages of life from the innocence of childhood to the complexities of adulthood.</p>
                 </div>
@@ -75,8 +75,8 @@
 
         <div id="e-4">
             <div class="e-c-l-b">
-                <h1>4. Impact of Education and Teachers</h1>
-                <div class="e-content-l">
+                <h1>4. Impact of Education <br> and Teachers</h1>
+                <div id="fourth-set" class="sets">
                     <img src="assets/explore/Theme Images/theme4.png" alt="">
                     <p>The book highlights the significant role of education and teachers in shaping one's identity and future, portraying the classroom as a place not just for learning but also for life lessons.</p>
                 </div>
@@ -86,7 +86,7 @@
         <div id="e-5">
             <div class="e-c-r-b">
                 <h1>5. Friendship and Social Dynamics</h1>
-                <div class="e-content-r">
+                <div id="fifth-set" class="sets">
                     <p>It explores the dynamics of friendships formed during school days, from childhood best friends to high school cliques, and how these relationships influence one’s perspective and decisions.</p>
                     <img src="assets/explore/Theme Images/theme5.png" alt="">
                 </div>
@@ -96,7 +96,7 @@
         <div id="e-6">
             <div id="e-c-ld-b">
                 <h1>6. Reality vs. Expectations</h1>
-                <div id="e-6-content">
+                <div id="sixth-set" class="sets">
                     <img src="assets/explore/Theme Images/theme6.png" alt="">
                     <p>The narrative contrasts the idealistic expectations set by society, parents, and oneself against the harsh realities of growing up, studying, graduating, and facing adulthood.</p>
                 </div>
@@ -106,9 +106,9 @@
         <div id="e-7">
             <div class="e-c-l-b">
                 <h1>7. Cultural Commentary on Philippine Society</h1>
-                <div class="e-content-l">
-                    <p>Through humor and satire, Bob Ong provides a critical yet endearing view of Filipino culture, including societal norms, family expectations, and the Philippines educational system.</p>
+                <div id="last-set" class="sets">
                     <img src="assets/explore/Theme Images/theme7.png" alt="">
+                    <p>Through humor and satire, Bob Ong provides a critical yet endearing view of Filipino culture, including societal norms, family expectations, and the Philippines educational system.</p>
                 </div>
             </div>
         </div>
