--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <nav class="navBar">
-            <div class="logo">A6</div>
+            <div class="logo">Acoustic 6</div>
 
             <!-- Hamburger Menu Button (Hidden on Desktop) -->
             <button class="hamburger">&#9776;</button>
