--- a/explore.html
+++ b/explore.html
@@ -37,7 +37,7 @@
     
     <div class="intro-box">
         <h2>Explore</h2>
-        <h1>Discover the Heart of Filipino School Life</h1>
+        <h1>Let's discover the Heart of Filipino School Life!</h1>
         <p>Dive into the rich themes of ABNKKBSNPLAko?! that resonate with every Filipino student. Our
             interactive format brings these themes to life, making learning both fun and engaging.</p>
     </div>
