--- a/explore.html
+++ b/explore.html
@@ -47,7 +47,7 @@
         <button id="backToTop">
             <img src="assets/explore/button.svg" alt="Back to Top Button">
         </button>
-        <img src="assets/explore/explore.png" alt="Explore Image" class="full-size-image">
+        <img src="assets/explore/explore.png" alt="Preloading..." class="full-size-image">
     </div>
 </section>
        
