--- a/explore.html
+++ b/explore.html
@@ -13,6 +13,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+
+    <link rel="preload" as="image" href="assets/explore/explore.png">
+    <link rel="preload" as="image" href="assets/explore/explore-mobile.png">
+
 </head>
 
 <body>
