Fixed mobile responsiveness for read section

--- a/read.html
+++ b/read.html
@@ -67,7 +67,9 @@
                 </div>
             </div>
             <h1>Challenges + Funny Moments</h1>
-            <img src="assets/read/elementary/elem-stickynotes.png" alt="">
+            <div class="read-img-box">
+                <img class="read-notes" src="assets/read/elementary/elem-stickynotes.png" alt="">
+            </div>
             <h2 id="remarks-text">
                 Pero hindi pwedeng habang buhay kang nasa elementarya. Dumating din ang araw na kailangan mong magpaalam sa paborito mong guro, sa mga baong ginagawang ng nanay mo, at sa murang tuition fee. 
                 <br>
@@ -88,7 +90,10 @@
                 </p> 
             </div>
             <h1>Challenges + Funny Moments</h1>
-            <img src="assets/read/highschool/highschool-stickynotes.png" alt="">
+
+            <div class="read-img-box">
+                <img class="read-notes" src="assets/read/highschool/highschool-stickynotes.png" alt="">
+            </div>
             <h2 id="remarks-text">
                 Pero gaya ng elementarya, ang high school ay isang stage lang ng buhay. Kapag dumating ang graduation, marerealize mong hindi pa pala tapos ang pag-aaral mo—sa totoo lang, nagsisimula pa lang ang totoong laban sa kolehiyo.
             </h2>
@@ -97,16 +102,18 @@
         <div class="reading-section">
             <h1>College Life</h1>
             <div class="reading-content">
+                <img src="assets/read/college/college-pic.png" alt="">
                 <p>
                     Kung sa high school, takot ka sa ibang estudyante, sa kolehiyo naman, takot ka sa tuition fee at thesis. Ito ang panahon kung saan matututunan mong hindi lang katalinuhan ang puhunan sa pag-aaral—kailangan mo ring maging madiskarte.
                     <br>
                     <br>
                     Sa unang araw ng klase, pumasok si Bob Ong sa university, bitbit ang pangarap na makatapos… at ang malaking kaba sa dibdib. Dito niya nakilala si Portia—ang kaklaseng magaling sa recitation pero hindi mo maintindihan kung paano siya laging handa.
                 </p> 
-                <img src="assets/read/college/college-pic.png" alt="">
             </div>
-            <h1>Challenges + Funny Moments</h1>
-            <img src="assets/read/college/college-stickynotes.png" alt="">
+            <h1>Challenges + Funclass="read-notes" ny Moments</h1>
+            <div class="read-img-box">
+                <img class="read-notes" src="assets/read/college/college-stickynotes.png" alt="">
+            </div>
             <h2 id="remarks-text">
                 At kapag akala mong tapos na lahat ng hirap, biglang darating ang graduation… at malalaman mong may mas malaking problema ka: “paano nga ba ako maghahanap ng trabaho?”
             </h2>
@@ -124,7 +131,9 @@
                 </p>
             </div> 
             <h1>Challenges + Funny Moments</h1>
-            <img id="resize-Img" src="assets/read/adulthood/adulthood-stickynotes.png" alt="">
+            <div class="read-img-box">
+                <img class="read-notes" id="resize-Img" src="assets/read/adulthood/adulthood-stickynotes.png" alt="">
+            </div>
             <h2 id="remarks-text">
                 Sa huli, ang buhay ay parang eskwelahan—walang katapusang aral, quizzes, at exams. Pero kahit mahirap, sulit pa rin, kasi sa bawat stage ng buhay, may bagong kwento kang mabubuo. At sa huli, lahat ng ‘ABNKKBSNPLAko?!’ moments mo, sila rin ang magpapatawa at magpapaiyak sa’yo pag binalikan mo na lang sila bilang alaala.
                 <br>
