--- a/read.html
+++ b/read.html
@@ -110,7 +110,7 @@
                     Sa unang araw ng klase, pumasok si Bob Ong sa university, bitbit ang pangarap na makatapos… at ang malaking kaba sa dibdib. Dito niya nakilala si Portia—ang kaklaseng magaling sa recitation pero hindi mo maintindihan kung paano siya laging handa.
                 </p> 
             </div>
-            <h1>Challenges + Funclass="read-notes" ny Moments</h1>
+            <h1>Challenges + Funny Moments</h1>
             <div class="read-img-box">
                 <img class="read-notes" src="assets/read/college/college-stickynotes.png" alt="">
             </div>
