--- a/read.html
+++ b/read.html
@@ -68,7 +68,7 @@
             </div>
             <h1>Challenges + Funny Moments</h1>
             <div class="read-img-box">
-                <img class="read-notes" src="assets/read/elementary/elem-stickynotes.png" alt="">
+				<img class="elem-stickynotes-image" src="assets/read/elementary/elem-stickynotes.png" alt="">
             </div>
             <h2 id="remarks-text">
                 Pero hindi pwedeng habang buhay kang nasa elementarya. Dumating din ang araw na kailangan mong magpaalam sa paborito mong guro, sa mga baong ginagawang ng nanay mo, at sa murang tuition fee. 
