--- a/read.html
+++ b/read.html
@@ -79,7 +79,7 @@
         </div>
 
         <div class="reading-section">
-            <h1>High School Life</h1>
+            <h1>Highschool Life</h1>
             <div class="reading-content">
                 <img src="assets/read/highschool/highschool-pic.png" alt="">
                 <p>
