--- a/quiz.html
+++ b/quiz.html
@@ -136,7 +136,7 @@
     </div>
 
 
-    <footer class="quiz-footer">
+    <footer class="page-footers">
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
     </footer>
 </body>
