--- a/read.html
+++ b/read.html
@@ -56,7 +56,7 @@
                     "Mga bata, ako si Gng. Cruz, at ako ang magiging guro ninyo ngayong taon."
                     <br>
                     <br>
-                    Sa tabi niya, naroon si Ulo—hindi dahil malaki ang ulo niya, kundi dahil parang palaging may iniisip na kalokohan. Sa likod, may isang tahimik na batang babae na tila may kakaibang liwanag sa kanyang presensya. Siya si Special Someone.
+                    Nandiyan din ang kanyang dalawang kaibigan: si Portia (who secretly has crush on Bob Ong), at si Ulo—hindi dahil malaki ang ulo niya, kundi dahil parang palaging may iniisip na kalokohan. Sa likod, may isang tahimik na batang babae na tila may kakaibang liwanag sa kanyang presensya. Siya si Special Someone.
                     <br>
                     <br>
                     Dito nagsimula ang lahat—ang pagsagot sa mga tanong na hindi mo rin alam kung bakit tinatanong, ang pagbasa ng abakada kahit marunong ka na, at ang unang beses mong maranasan ang stress sa pagsusulit kahit madali lang naman dapat ito.
@@ -86,7 +86,7 @@
                     Kung sa elementarya, takot ka sa guro, sa high school naman, takot ka sa ibang estudyante. Biglang dumami ang mga tao at lumawak ang mundo mo. Dito mo makikita ang iba't ibang personalidad—may cool kids, may nerds, may tahimik lang sa sulok, at syempre, andiyan pa rin si Bob Ong na nagtataka kung bida ba talaga siya sa sariling kwento.
                     <br>
                     <br>
-                    Ang unang araw sa high school ay parang panibagong pagsubok—mas mahaba ang pila sa canteen, mas maraming assignment, at mas mataas ang pressure na magkaroon ng barkada. Buti na lang, andiyan pa rin si Ulo na mas makulit kaysa dati, at si Special Someone, na mas maganda pa yata ngayon.
+                    Ang unang araw sa high school ay parang panibagong pagsubok—mas mahaba ang pila sa canteen, mas maraming assignment, at mas mataas ang pressure na magkaroon ng barkada. Buti na lang, andiyan pa rin si Ulo na mas makulit kaysa dati, at si Special Someone, na mas maganda pa yata ngayon. Dito din sinabi ni Portia na ang tipon niya pala ay mga babae.
                 </p> 
             </div>
             <h1>Challenges + Funny Moments</h1>
@@ -107,7 +107,7 @@
                     Kung sa high school, takot ka sa ibang estudyante, sa kolehiyo naman, takot ka sa tuition fee at thesis. Ito ang panahon kung saan matututunan mong hindi lang katalinuhan ang puhunan sa pag-aaral—kailangan mo ring maging madiskarte.
                     <br>
                     <br>
-                    Sa unang araw ng klase, pumasok si Bob Ong sa university, bitbit ang pangarap na makatapos… at ang malaking kaba sa dibdib. Dito niya nakilala si Portia—ang kaklaseng magaling sa recitation pero hindi mo maintindihan kung paano siya laging handa.
+                    Sa unang araw ng klase, pumasok si Bob Ong sa university, bitbit ang pangarap na makatapos… at ang malaking kaba sa dibdib. 
                 </p> 
             </div>
             <h1>Challenges + Funny Moments</h1>
