--- a/quiz.html
+++ b/quiz.html
@@ -129,7 +129,8 @@
                     <strong>Memorable Moments:</strong>
                 </p>
                 <ul class="m-list">
-                    <li>Being part of Bob Ong’s friend circle and school life</li>
+                    <li>Being part of Bob Ong’s friend circle and school life.</li>
+                    <li>Liked Bob Ong secretly before coming out as lesbian.</li>
                 </ul>
             </div>
         </div>
