--- a/quiz.html
+++ b/quiz.html
@@ -121,7 +121,7 @@
                 <h2>Portia</h2>
                 <h3>The Sweet & Friendly Girl Next Door</h3>
                 <p>Portia is another notable female character who plays a part in Bob Ong’s school journey. She is
-                    friendly, approachable, and sometimes caught in the middle of the high school drama.</p>
+                    friendly, approachable, and part of Bob Ong’s friend circle and school life.</p>
                 <p class="t-c-m">
                     <strong>Traits:</strong> Kind, approachable, observant
                     <br>
@@ -129,8 +129,7 @@
                     <strong>Memorable Moments:</strong>
                 </p>
                 <ul class="m-list">
-                    <li>Being part of Bob Ong’s friend circle and school life.</li>
-                    <li>Liked Bob Ong secretly before coming out as lesbian.</li>
+                    <li>Secretly liked Bob Ong but later came out as lesbian.</li>
                 </ul>
             </div>
         </div>
