--- a/read.html
+++ b/read.html
@@ -86,7 +86,7 @@
                     Kung sa elementarya, takot ka sa guro, sa high school naman, takot ka sa ibang estudyante. Biglang dumami ang mga tao at lumawak ang mundo mo. Dito mo makikita ang iba't ibang personalidad—may cool kids, may nerds, may tahimik lang sa sulok, at syempre, andiyan pa rin si Bob Ong na nagtataka kung bida ba talaga siya sa sariling kwento.
                     <br>
                     <br>
-                    Ang unang araw sa high school ay parang panibagong pagsubok—mas mahaba ang pila sa canteen, mas maraming assignment, at mas mataas ang pressure na magkaroon ng barkada. Buti na lang, andiyan pa rin si Ulo na mas makulit kaysa dati, at si Special Someone, na mas maganda pa yata ngayon. Dito din sinabi ni Portia na ang tipon niya pala ay mga babae.
+                    Ang unang araw sa high school ay parang panibagong pagsubok—mas mahaba ang pila sa canteen, mas maraming assignment, at mas mataas ang pressure na magkaroon ng barkada. Buti na lang, andiyan pa rin si Ulo na mas makulit kaysa dati, at si Special Someone, na mas maganda pa yata ngayon. Dito din sinabi ni Portia na babae ang gusto niya.
                 </p> 
             </div>
             <h1>Challenges + Funny Moments</h1>
