--- a/read.html
+++ b/read.html
@@ -56,7 +56,7 @@
                     "Mga bata, ako si Gng. Cruz, at ako ang magiging guro ninyo ngayong taon."
                     <br>
                     <br>
-                    Nandiyan din ang kanyang dalawang kaibigan: si Portia (who secretly has crush on Bob Ong), at si Ulo—hindi dahil malaki ang ulo niya, kundi dahil parang palaging may iniisip na kalokohan. Sa likod, may isang tahimik na batang babae na tila may kakaibang liwanag sa kanyang presensya. Siya si Special Someone.
+                    Nandiyan din ang kanyang dalawang kaibigan: si Portia (who secretly has likes him), at si Ulo—hindi dahil malaki ang ulo niya, kundi dahil parang palaging may iniisip na kalokohan. Sa likod, may isang tahimik na batang babae na tila may kakaibang liwanag sa kanyang presensya. Siya si Special Someone.
                     <br>
                     <br>
                     Dito nagsimula ang lahat—ang pagsagot sa mga tanong na hindi mo rin alam kung bakit tinatanong, ang pagbasa ng abakada kahit marunong ka na, at ang unang beses mong maranasan ang stress sa pagsusulit kahit madali lang naman dapat ito.
