--- a/quiz.html
+++ b/quiz.html
@@ -129,7 +129,7 @@
                     <strong>Memorable Moments:</strong>
                 </p>
                 <ul class="m-list">
-                    <li>Secretly liked Bob Ong but later came out as lesbian.</li>
+                    <li>Secretly liked Bob Ong but later came out as lesbian</li>
                 </ul>
             </div>
         </div>
